--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,12 @@
 language: R
 cache: packages
 
-# build matrix; turn on vdiffr only on r release
 matrix:
   include:
   - r: release
   - r: 3.5
   - r: 3.4
     env: R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
+  include:
+    before_install:
+      - R -e 'install.packages("BH")'
