--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,6 @@ matrix:
   - r: 3.5
   - r: 3.4
     env: R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
+  include:
+    before_install:
+      - R -e 'devtools::install_github("Yashwants19/bh")'
