--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
 language: R
 cache: packages
+warnings_are_errors: false
 
 matrix:
-  include:
-  - r: release
-  - r: 3.5
-  - r: 3.4
-    env: R_REMOTES_NO_ERRORS_FROM_WARNINGS=true
   include:
     before_install:
       - R -e 'install.packages("devtools")'
