--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,13 @@ cache: packages
 
 matrix:
   include:
-    before_install:
-      - R -e 'install.packages("devtools")'
-      - R -e 'devtools::install_github("Yashwants19/bh")'
+    - dist: xenial
+      before_install:
+        - R -e 'install.packages("devtools")'
+        - R -e 'devtools::install_github("Yashwants19/bh")'
+    - os: osx
+      osx_image: xcode7.3
+      disable_homebrew: true
+      before_install:
+        - R -e 'install.packages("devtools")'
+        - R -e 'devtools::install_github("Yashwants19/bh")'
