--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ cache: packages
 
 matrix:
   include:
-    - dist: xenial
-      before_install:
-        - R -e 'install.packages("devtools")'
-        - R -e 'devtools::install_github("Yashwants19/bh")'
-    - os: osx
-      osx_image: xcode7.3
-      disable_homebrew: true
+  - os: linux
+    dist: xenial
+    before_install:
+      - R -e 'install.packages("devtools")'
+      - R -e 'devtools::install_github("Yashwants19/bh")'
+
+  - os: osx
+    osx_image: xcode9.4
       before_install:
         - R -e 'install.packages("devtools")'
         - R -e 'devtools::install_github("Yashwants19/bh")'
