--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,13 @@ cache: packages
 
 matrix:
   include:
-  - os: linux
-    dist: xenial
+  - dist: xenial
     before_install:
       - R -e 'install.packages("devtools")'
       - R -e 'devtools::install_github("Yashwants19/bh")'
 
   - os: osx
     osx_image: xcode9.4
-      before_install:
-        - R -e 'install.packages("devtools")'
-        - R -e 'devtools::install_github("Yashwants19/bh")'
+    before_install:
+      - R -e 'install.packages("devtools")'
+      - R -e 'devtools::install_github("Yashwants19/bh")'
