--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
 
   - os: osx
     osx_image: xcode9.4
+    r_check_args: --as-cran --no-build-vignettes --no-vignettes
     before_install:
       - R -e 'install.packages("devtools")'
       - R -e 'devtools::install_github("Yashwants19/bh")'
