--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,14 @@
 language: R
 cache: packages
+warnings_are_errors: false
+r_github_packages:
+- Yashwants19/bh
 
 matrix:
   include:
-  - dist: xenial
-    before_install:
-      - R -e 'install.packages("devtools")'
-      - R -e 'devtools::install_github("Yashwants19/bh")'
-
+  - os: linux
   - os: osx
     osx_image: xcode9.4
     latex: false
     r_build_args: --no-build-vignettes  ## WORKAROUND: multirow.sty missing
     r_check_args: --as-cran --no-build-vignettes --no-vignettes
-    before_install:
-      - R -e 'install.packages("devtools")'
-      - R -e 'devtools::install_github("Yashwants19/bh")'
