--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,6 +15,7 @@ cache:
 # Adapt as necessary starting from here
 
 build_script:
+  - travis-tool.sh install_github "Yashwants19/BH"
   - travis-tool.sh install_deps
 
 test_script:
