Added some more handwritten binding and Add tranform_model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,5 +1,9 @@
 useDynLib("RcppMLPACK", .registration=TRUE)
 export("RcppMLPACK.package.skeleton",
-       "testRBinding")
+       "testRBinding",
+       "Lars",
+       "Pca",
+       "transform_model")
+import(xml2)
 importFrom("Rcpp", "evalCpp")
 importFrom("utils", "packageDescription", "package.skeleton")
