Lets add cf again.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(Serialize)
 export(Unserialize)
 export(adaboost)
 export(approx_kfn)
+export(cf)
 export(dbscan)
 export(decision_stump)
 export(decision_tree)
