--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -18,6 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         config:
+        - { os: windows-latest, r: '3.6'}
         - { os: windows-latest, r: 'devel'}
         - { os: windows-latest, r: 'release'}
         - { os: macOS-latest, r: '3.6'}
@@ -68,7 +69,7 @@ jobs:
         run: Rscript -e "library(remotes)" -e "update(readRDS('depends.Rds'))" -e "remotes::install_cran('rcmdcheck')"
 
       - name: Check
-        run: Rscript -e "rcmdcheck::rcmdcheck(args = c('--no-manual', '--no-build-vignettes', '--no-vignettes'), build_args = '--no-build-vignettes', error_on = 'error', check_dir = 'check')"
+        run: Rscript -e "rcmdcheck::rcmdcheck(args = c('--no-manual', '--no-build-vignettes', '--no-vignettes', '--as-cran'), build_args = '--no-build-vignettes', error_on = 'error', check_dir = 'check')"
 
       - name: Upload check results
         if: failure()
