--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,13 @@ Description: 'MLPACK' is an intuitive, fast, scalable C++ machine learning
    sources are included in the package.
 SystemRequirements: A C++11 compiler. Versions 4.8.*, 4.9.* or later of GCC will be fine.
 License: GPL (>= 2)
-Depends: R (>= 3.2.0)
+Depends: R (>= 4.0)
 Imports: Rcpp (>= 0.12.4), xml2
 LinkingTo: Rcpp, RcppArmadillo, BH, RcppEnsmallen
 VignetteBuilder: knitr
 Suggests:
     knitr,
     testthat (>= 2.1.0)
-URL: http://www.mlpack.org/
+URL: https://www.mlpack.org/
 BugReports: https://github.com/Yashwants19/RcppMLPACK/issues
 RoxygenNote: 7.1.1
