--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(hmm_generate)
 export(hmm_loglik)
 export(hmm_train)
 export(hmm_viterbi)
+export(hoeffding_tree)
 export(image_converter)
 export(kde)
 export(kernel_pca)
